--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,11 @@
     "comma-dangle": "off",
     "indent": "off",
     "require-jsdoc": "off",
-    "eol-last": "off"
+    "eol-last": "off",
+    "no-trailing-spaces": "off",
+    "quotes": "off",
+    "padded-blocks": "off",
+    "operator-linebreak": "off"
   },
   "extends": ["eslint:recommended", "google"]
 }
